Remove Unarmored AC and reformat DR label

--- a/templates/actor/parts/actor-combat.hbs
+++ b/templates/actor/parts/actor-combat.hbs
@@ -54,8 +54,8 @@
           <input type="text" name="system.ac.value" value="{{system.ac.value}}" data-dtype="Number" />
           <label for="system.ac.dr" class="combat-label">{{localize "HYP3E.armor.dr"}}</label>
           <input type="text" name="system.ac.dr" value="{{system.ac.dr}}" data-dtype="Number" />
-          <label for="system.unarmoredAc" class="combat-label">{{localize "HYP3E.armor.unarmored"}}</label>
-          <input type="text" name="system.unarmoredAc" value="{{system.unarmoredAc}}" />
+          {{!-- <label for="system.unarmoredAc" class="combat-label">{{localize "HYP3E.armor.unarmored"}}</label> --}}
+          {{!-- <input type="text" name="system.unarmoredAc" value="{{system.unarmoredAc}}" /> --}}
         </div>
         <div class="resource-content flexrow flex-group-center">
           <span></span><span></span>
