Change wording on dmg resist label

--- a/templates/item/item-armor-sheet.hbs
+++ b/templates/item/item-armor-sheet.hbs
@@ -48,7 +48,7 @@
           </div>
           <label class="resource-label">{{localize 'HYP3E.armor.armorClass'}}</label>
           <input type="text" name="system.ac" value="{{system.ac}}" data-dtype="Number" />
-          <label class="resource-label">{{localize 'HYP3E.armor.dmgResist'}}</label>
+          <label class="resource-label">{{localize 'HYP3E.armor.dmgReduct'}}</label>
           <input type="text" name="system.dr" value="{{system.dr}}" data-dtype="Number" />
           <label class="resource-label">{{localize 'HYP3E.movement.base.name'}}</label>
           <input type="text" name="system.mv" value="{{system.mv}}" data-dtype="Number" />
