--- a/templates/actor/parts/actor-combat.hbs
+++ b/templates/actor/parts/actor-combat.hbs
@@ -52,7 +52,7 @@
         <div class="resource-content flexrow flex-group-center">
           <label for="system.ac.value" class="combat-label">{{localize "HYP3E.armor.armorClass"}}</label>
           <input type="text" name="system.ac.value" value="{{system.ac.value}}" data-dtype="Number" />
-          <label for="system.ac.dr" class="combat-label">{{localize "HYP3E.armor.dr"}}</label>
+          <label for="system.ac.dr" class="combat-label">{{localize "HYP3E.armor.dmgReduct"}}</label>
           <input type="text" name="system.ac.dr" value="{{system.ac.dr}}" data-dtype="Number" />
           {{!-- <label for="system.unarmoredAc" class="combat-label">{{localize "HYP3E.armor.unarmored"}}</label> --}}
           {{!-- <input type="text" name="system.unarmoredAc" value="{{system.unarmoredAc}}" /> --}}
