Changed item cost to string field

--- a/templates/item/item-container-sheet.hbs
+++ b/templates/item/item-container-sheet.hbs
@@ -10,7 +10,7 @@
         </div>
         <div class="resource flexrow flex-group-center">
           <label class="resource-label flexlarge">{{localize 'HYP3E.item.cost'}}</label>
-          <input type="text" name="system.cost" value="{{system.cost}}" data-dtype="Number"/>
+          <input type="text" name="system.cost" value="{{system.cost}}" />
         </div>
         <div class="resource flexrow flex-group-center">
           <label class="resource-label flexlarge">{{localize 'HYP3E.item.weight'}}</label>
