--- a/templates/item/item-armor-sheet.hbs
+++ b/templates/item/item-armor-sheet.hbs
@@ -14,7 +14,7 @@
         </div>
         <div class="resource flexrow flex-group-center">
           <label class="resource-label">{{localize 'HYP3E.item.cost'}}</label>
-          <input type="text" name="system.cost" value="{{system.cost}}" data-dtype="Number"/>
+          <input type="text" name="system.cost" value="{{system.cost}}" />
         </div>
         <div class="resource flexrow flex-group-center">
           <label class="resource-label">{{localize 'HYP3E.item.weight'}}</label>
