--- a/templates/chat/apply-damage.hbs
+++ b/templates/chat/apply-damage.hbs
@@ -1,4 +1,4 @@
 <div class="message-content">
-    <h4>{{title}}</h4>
+    <h4 class="dice-damage">{{title}}</h4>
     <div class="chat-details">{{{body}}}</div>
 </div>
