--- a/templates/item/item-armor-sheet.hbs
+++ b/templates/item/item-armor-sheet.hbs
@@ -5,8 +5,8 @@
       <h1 class="charname"><input name="name" type="text" value="{{item.name}}" placeholder="Name"/></h1>
       <div class="flexrow">
         <div class="resource flexrow flex-group-center">
-          <label class="resource-label">{{localize 'HYP3E.item.equipped'}}</label>
-          <input name="system.equipped" type="checkbox" {{checked system.equipped}}>
+          <label class="resource-label">{{localize 'HYP3E.details.xp'}}</label>
+          <input type="text" name="system.xp" value="{{system.xp}}" >
         </div>
         <div class="resource flexrow flex-group-center">
           <label class="resource-label">{{localize 'HYP3E.item.qty'}}</label>
@@ -52,6 +52,8 @@
           <input type="text" name="system.dr" value="{{system.dr}}" data-dtype="Number" />
           <label class="resource-label">{{localize 'HYP3E.movement.base.name'}}</label>
           <input type="text" name="system.mv" value="{{system.mv}}" data-dtype="Number" />
+          <label class="resource-label">{{localize 'HYP3E.item.equipped'}}</label><br />
+          <input name="system.equipped" type="checkbox" {{checked system.equipped}}>
         </div>
 
         {{!-- Description --}}
