--- a/templates/actor/parts/actor-abilities.hbs
+++ b/templates/actor/parts/actor-abilities.hbs
@@ -46,13 +46,13 @@
             <span class="flex-xlarge align-left">
               <label for="system.movement.exploration.name" class="exploration-label">{{localize "HYP3E.movement.exploration.name"}}</label>
             </span>
-            <input type="text" name="system.movement.exploration.value" value="{{system.movement.exploration.value}}" data-dtype="Number" disabled/>
+            <input type="text" name="system.movement.exploration.value" value="{{system.movement.exploration.value}}" data-dtype="Number" />
           </div>
           <div class="ability flexrow flex-group-center">
             <span class="flex-xlarge align-left">
               <label for="system.movement.travel.name" class="exploration-label">{{localize "HYP3E.movement.travel.name"}}</label>
             </span>
-            <input type="text" name="system.movement.travel.value" value="{{system.movement.travel.value}}" data-dtype="Number" disabled/>
+            <input type="text" name="system.movement.travel.value" value="{{system.movement.travel.value}}" data-dtype="Number" />
           </div>
         </div>
         {{!-- <div class="hyp3e-metal">
