--- a/css/hyp3e.css
+++ b/css/hyp3e.css
@@ -274,6 +274,14 @@ textarea {
   /* color: #e90000; */
 }
 
+.chat-button-small {
+  width: 22px;
+  height:22px;
+  font-size:10px;
+  line-height:1px
+}
+
+
 /* Styles limited to hyp3e sheets */
 .hyp3e {
   /* Example style for Hyp3e (can be removed if not needed) */
@@ -317,6 +325,39 @@ textarea {
   margin-right: 10px;
   border: none;
 }
+
+/* Sets the position of the health-bar and strain-bar and sets it to the propper size. */
+.hyp3e .health-bar {
+  position: absolute;
+  bottom: -5px;
+
+  width: 100%;
+  height: 15px;
+
+  border: 1px solid rgb(170,170,170);
+
+  box-shadow: 0 0 5px inset rgb(0,0,0,0.4);
+  background-color: whitesmoke;
+}
+
+.hyp3e .health-bar .health-fill {
+  background: linear-gradient(45deg, rgba(48,121,22,1) 0%, rgba(97,190,80,1) 100%);
+  height: 100%;
+}
+
+/* Positions the HP text in the center of the healthbar or strainbar */
+.hyp3e .health-text {
+  display: flex;
+  position: relative;
+  top: -100%;
+  
+  width: 100%;
+  height: 100%;
+
+  justify-content: center;
+}
+
+
 .hyp3e .sheet-header .header-block {
   -webkit-box-flex: 1;
   -ms-flex: 1;
