--- a/templates/item/item-item-sheet.hbs
+++ b/templates/item/item-item-sheet.hbs
@@ -5,6 +5,10 @@
       <h1 class="charname"><input name="name" type="text" value="{{item.name}}" placeholder="Name"/></h1>
       <div class="flexrow">
         <div class="resource flexrow flex-group-center">
+          <label class="resource-label">{{localize 'HYP3E.details.xp'}}</label>
+          <input type="text" name="system.xp" value="{{system.xp}}" >
+        </div>
+        <div class="resource flexrow flex-group-center">
           <label class="resource-label flexlarge">{{localize 'HYP3E.item.qty'}}</label>
           <input type="text" name="system.quantity.value" value="{{system.quantity.value}}" data-dtype="Number"/>
           /
@@ -12,7 +16,7 @@
         </div>
         <div class="resource flexrow flex-group-center">
           <label class="resource-label flexlarge">{{localize 'HYP3E.item.cost'}}</label>
-          <input type="text" name="system.cost" value="{{system.cost}}" data-dtype="Number"/>
+          <input type="text" name="system.cost" value="{{system.cost}}" />
         </div>
         <div class="resource flexrow flex-group-center">
           <label class="resource-label flexlarge">{{localize 'HYP3E.item.weight'}}</label>
@@ -43,12 +47,6 @@
           <input type="text" name="system.formula" value="{{system.formula}}" data-dtype="String"/>
           <label class="resource-label">{{localize 'HYP3E.target'}}</label>
           <input type="text" name="system.tn" value="{{system.tn}}" data-dtype="String"/>
-          {{!-- <label class="resource-label">{{localize 'HYP3E.blindRoll'}}</label>
-          <input type="text" name="system.blindRoll" value="{{system.blindRoll}}" data-dtype="String" disabled/> --}}
-          {{!-- <select name="system.blindRoll">
-            <option value=""></option>
-            {{selectOptions blindRollOpts selected=system.blindRoll localize=true}}
-          </select> --}}
           <label class="resource-label">{{localize 'HYP3E.spell.save'}}</label>
           <div class="form-fields">
             <select name="system.save">
@@ -56,6 +54,8 @@
               {{selectOptions saveThrows selected=system.save localize=true}}
             </select>
           </div>
+          <label class="resource-label">{{localize 'HYP3E.item.equipped'}}</label><br />
+          <input name="system.equipped" type="checkbox" {{checked system.equipped}}>
         </div>
 
         {{!-- Description Tab --}}
@@ -91,8 +91,17 @@
         </div>
         <label class="resource-label">{{localize 'HYP3E.dataLabel.itemId'}}</label>
         <input type="text" name="item._id" value="{{item._id}}" disabled/>
+        {{#unless system.isContainer}}
         <label class="resource-label">{{localize 'HYP3E.dataLabel.containerId'}}</label>
         <input type="text" name="system.containerId" value="{{system.containerId}}"/>
+        {{/unless}}
+        <div class="flexrow flexshrink flex-group-left item-attributes">
+          <label class="resource-label">{{localize 'HYP3E.item.container'}}</label>
+          <input id="system.isContainer" name="system.isContainer" type="checkbox" {{checked system.isContainer}}>
+          <div class="flex-xlarge">The Container tag allows this item to contain other non-container items.</div>
+        </div>
+        {{!-- <label class="resource-label">{{localize 'HYP3E.dataLabel.containedItemIds'}}</label>
+        <input type="text" name="system.itemIds" value="{{system.itemIds}}"/> --}}
       </div>
     </div>
   </section>
