--- a/templates/actor/parts/actor-items.hbs
+++ b/templates/actor/parts/actor-items.hbs
@@ -37,7 +37,7 @@
               {{#if container.system.quantity.max}}
                 / {{container.system.quantity.max}}
               {{/if}}</div>
-            <div class="item-prop">{{container.system.weight}}</div>
+            <div class="item-prop">{{container.system.carriedWt}}</div>
             <div class="item-prop">{{container.system.location}}</div>
             <div class="item-controls">
               <a class="item-control item-show" title='{{localize "HYP3E.item.show"}}'><i class="fas fa-eye"></i></a>
@@ -77,7 +77,7 @@
                   / {{item.system.quantity.max}}
                 {{/if}}
               </div>
-              <div class="item-prop">{{item.system.weight}}</div>
+              <div class="item-prop">{{item.system.carriedWt}}</div>
               <div class="item-prop">{{item.system.location}}</div>
               <div class="item-controls">
                 <a class="item-control item-show" title='{{localize "HYP3E.item.show"}}'><i class="fas fa-eye"></i></a>
@@ -119,7 +119,7 @@
                 / {{item.system.quantity.max}}
               {{/if}}
             </div>
-            <div class="item-prop">{{item.system.weight}}</div>
+            <div class="item-prop">{{item.system.carriedWt}}</div>
             <div class="item-prop">{{item.system.location}}</div>
             <div class="item-controls">
               <a class="item-control item-show" title='{{localize "HYP3E.item.show"}}'><i class="fas fa-eye"></i></a>
