Finishing touches on issue #43

--- a/templates/chat/attack-roll.hbs
+++ b/templates/chat/attack-roll.hbs
@@ -1,4 +1,6 @@
-{{{description}}}
+<div style="padding-bottom: 10px">
+    {{{headerHTML}}}
+</div>
 <div class="dice-roll">
     <div class="dice-result">
         <div class="dice-formula">{{roll.formula}}</div>
@@ -25,4 +27,6 @@
         <h4 class="dice-total">{{roll.total}}</h4>
     </div>
 </div>
-{{{footerHTML}}}
+<div style="padding-top: 10px">
+    {{{footerHTML}}}
+</div>
