Change layout of critical damage applied

--- a/templates/chat/apply-damage.hbs
+++ b/templates/chat/apply-damage.hbs
@@ -1,4 +1,5 @@
 <div class="message-content">
+    <div class="chat-details">{{{extraRoll}}}</div>
     <h4 class="dice-damage">{{title}}</h4>
     <div class="chat-details">{{{body}}}</div>
 </div>
