Update system file format; added isGroupInitiative config variable; fix templatePath references

--- a/templates/actor/parts/npc-abilities.hbs
+++ b/templates/actor/parts/npc-abilities.hbs
@@ -31,8 +31,8 @@
           <input type="text" name="system.fa" value="{{system.fa}}" data-dtype="Number" />
         </div>
         <div class="attribute-row flexrow">
-          <label for="system.dx" class="combat-label">{{localize "HYP3E.attributes.dex.abbrev"}}</label>
-          <input type="text" name="system.dx" value="{{system.dx}}" data-dtype="Number" />
+          <label for="system.attributes.dex.value" class="combat-label">{{localize "HYP3E.attributes.dex.abbrev"}}</label>
+          <input type="text" name="system.attributes.dex.value" value="{{system.attributes.dex.value}}" data-dtype="Number" />
         </div>
         <div class="attribute-row flexrow">
           <label for="system.ac.value" class="combat-label">{{localize "HYP3E.armor.armorClass"}}</label>
