--- a/templates/sidebar/combat-tracker-combatant-individual.hbs
+++ b/templates/sidebar/combat-tracker-combatant-individual.hbs
@@ -29,7 +29,7 @@
                         <i class='fas fa-scroll'></i>
                     </a>
                     <a
-                        class='combatant-control move-combat{{#if this.isMove}} active{{/if}}'
+                        class='combatant-control move-combat{{#if this.isMovement}} active{{/if}}'
                         data-tooltip="{{localize 'HYP3E.combat.moveDeclared'}}"
                         role="button"
                         data-control="movement"
