Bug fix for individual initiative

--- a/templates/sidebar/combat-tracker-combatant-individual.hbs
+++ b/templates/sidebar/combat-tracker-combatant-individual.hbs
@@ -76,7 +76,7 @@
                     {{#if this.isSlowed}}
                     <i class="fa fa-weight-hanging"></i>
                     {{else}}
-                    <span class="initiative">{{this.initiative}}</span>
+                    <span class="initiative">{{this.initRoll}}</span>
                     {{/if}}
                 {{else if this.owner}}
                 <a class="combatant-control roll" aria-label="{{localize 'COMBAT.InitiativeRoll'}}" role="button" data-tooltip="COMBAT.InitiativeRoll" data-control="rollInitiative"></a>
