--- a/templates/item/item-item-sheet.hbs
+++ b/templates/item/item-item-sheet.hbs
@@ -30,6 +30,7 @@
   <nav class="sheet-tabs tabs" data-group="primary">
     <a class="item" data-tab="description">{{localize 'HYP3E.tabs.details'}}</a>
     <a class="item" data-tab="attributes">{{localize 'HYP3E.tabs.attributes'}}</a>
+    <a class="item" data-tab="effects">{{localize 'HYP3E.tabs.effects'}}</a>
   </nav>
 
   {{!-- Sheet Body --}}
@@ -98,6 +99,14 @@
           <input id="system.isContainer" name="system.isContainer" type="checkbox" {{checked system.isContainer}}>
           <div class="flex-xlarge">The Container tag allows this item to contain other non-container items.</div>
         </div>
+      </div>
+    </div>
+
+    {{!-- Effects Tab --}}
+    <div class="tab effects" data-group="primary" data-tab="effects">
+      {{!-- As you add new fields, add them in here! --}}
+      <div class="flex description-block">
+        {{> "systems/hyp3e/templates/item/parts/item-effects.hbs"}}
       </div>
     </div>
   </section>
