--- a/templates/item/item-weapon-sheet.hbs
+++ b/templates/item/item-weapon-sheet.hbs
@@ -28,6 +28,7 @@
   <nav class="sheet-tabs tabs" data-group="primary">
     <a class="item" data-tab="description">{{localize 'HYP3E.tabs.details'}}</a>
     <a class="item" data-tab="attributes">{{localize 'HYP3E.tabs.attributes'}}</a>
+    <a class="item" data-tab="effects">{{localize 'HYP3E.tabs.effects'}}</a>
   </nav>
 
   {{!-- Sheet Body --}}
@@ -86,9 +87,7 @@
     <div class="tab attributes" data-group="primary" data-tab="attributes">
       {{!-- As you add new fields, add them in here! --}}
       <div class="resource">
-        {{log 'User is GM? 'isGM}}
         {{#if isGM}}
-        {{!-- {{#if rollData.isGM}} --}}
         <label class="resource-label">{{localize 'HYP3E.rollFormula'}}</label>
         <input type="text" name="system.formula" value="{{system.formula}}" data-dtype="String"/>
         {{/if}}
@@ -98,6 +97,14 @@
         <input type="text" name="item._id" value="{{item._id}}" disabled/>
         <label class="resource-label">{{localize 'HYP3E.dataLabel.containerId'}}</label>
         <input type="text" name="system.containerId" value="{{system.containerId}}"/>
+      </div>
+    </div>
+    
+    {{!-- Effects Tab --}}
+    <div class="tab effects" data-group="primary" data-tab="effects">
+      {{!-- As you add new fields, add them in here! --}}
+      <div class="flex description-block">
+        {{> "systems/hyp3e/templates/item/parts/item-effects.hbs"}}
       </div>
     </div>
   </section>
