--- a/templates/item/item-spell-sheet.hbs
+++ b/templates/item/item-spell-sheet.hbs
@@ -22,6 +22,7 @@
   <nav class="sheet-tabs tabs" data-group="primary">
     <a class="item" data-tab="description">{{localize 'HYP3E.tabs.details'}}</a>
     <a class="item" data-tab="attributes">{{localize 'HYP3E.tabs.attributes'}}</a>
+    <a class="item" data-tab="effects">{{localize 'HYP3E.tabs.effects'}}</a>
   </nav>
 
   {{!-- Sheet Body --}}
@@ -65,9 +66,7 @@
     <div class="tab attributes" data-group="primary" data-tab="attributes">
       {{!-- As you add new fields, add them in here! --}}
       <div class="resource">
-        {{log 'User is GM? 'isGM}}
         {{#if isGM}}
-        {{!-- {{#if rollData.isGM}} --}}
         <label class="resource-label">{{localize 'HYP3E.rollFormula'}}</label>
         <input type="text" name="system.formula" value="{{system.formula}}" />
         {{/if}}
@@ -80,6 +79,14 @@
         </div>
         <label class="resource-label">{{localize 'HYP3E.dataLabel.itemId'}}</label>
         <input type="text" name="item._id" value="{{item._id}}" disabled/>
+      </div>
+    </div>
+    
+    {{!-- Effects Tab --}}
+    <div class="tab effects" data-group="primary" data-tab="effects">
+      {{!-- As you add new fields, add them in here! --}}
+      <div class="flex description-block">
+        {{> "systems/hyp3e/templates/item/parts/item-effects.hbs"}}
       </div>
     </div>
   </section>
