Fix for numeric saving throws

--- a/templates/actor/parts/actor-combat.hbs
+++ b/templates/actor/parts/actor-combat.hbs
@@ -87,35 +87,35 @@
           <label for="system.saves.death.value" class="combat-label">{{localize "HYP3E.saves.death.abbrev"}}</label><br />
           <i class="fas fa-dice-d20"></i>
           </span>
-        <input type="text" name="system.saves.death.value" value="{{system.saves.death.value}}"/>
+        <input type="text" name="system.saves.death.value" value="{{system.saves.death.value}}" data-dtype="Number"/>
       </div>
       <div class="combat-block flexrow flex-group-center">
         <span class="rollable" data-roll-type="save" data-roll="1d20" data-roll-mode="publicroll" data-roll-target="{{system.saves.device.value}}" data-label="{{localize 'HYP3E.dataLabel.deviceSave'}}">
           <label for="system.saves.device.value" class="combat-label">{{localize "HYP3E.saves.device.abbrev"}}</label><br />
           <i class="fas fa-dice-d20"></i>
         </span>
-        <input type="text" name="system.saves.device.value" value="{{system.saves.device.value}}"/>
+        <input type="text" name="system.saves.device.value" value="{{system.saves.device.value}}" data-dtype="Number"/>
       </div>
       <div class="combat-block flexrow flex-group-center">
         <span class="rollable" data-roll-type="save" data-roll="1d20" data-roll-mode="publicroll" data-roll-target="{{system.saves.transformation.value}}" data-label="{{localize 'HYP3E.dataLabel.xformSave'}}">
           <label for="system.saves.transformation.value" class="combat-label">{{localize "HYP3E.saves.transformation.abbrev"}}</label><br />
           <i class="fas fa-dice-d20"></i>
         </span>
-        <input type="text" name="system.saves.transformation.value" value="{{system.saves.transformation.value}}"/>
+        <input type="text" name="system.saves.transformation.value" value="{{system.saves.transformation.value}}" data-dtype="Number"/>
       </div>
       <div class="combat-block flexrow flex-group-center">
         <span class="rollable" data-roll-type="save" data-roll="1d20" data-roll-mode="publicroll" data-roll-target="{{system.saves.avoidance.value}}" data-label="{{localize 'HYP3E.dataLabel.avoidanceSave'}}">
           <label for="system.saves.avoidance.value" class="combat-label">{{localize "HYP3E.saves.avoidance.abbrev"}}</label><br />
           <i class="fas fa-dice-d20"></i>
         </span>
-        <input type="text" name="system.saves.avoidance.value" value="{{system.saves.avoidance.value}}"/>
+        <input type="text" name="system.saves.avoidance.value" value="{{system.saves.avoidance.value}}" data-dtype="Number"/>
       </div>
       <div class="combat-block flexrow flex-group-center">
         <span class="rollable" data-roll-type="save" data-roll="1d20" data-roll-mode="publicroll" data-roll-target="{{system.saves.sorcery.value}}" data-label="{{localize 'HYP3E.dataLabel.sorcerySave'}}">
           <label for="system.saves.sorcery.value" class="combat-label">{{localize "HYP3E.saves.sorcery.abbrev"}}</label><br />
           <i class="fas fa-dice-d20"></i>
         </span>
-        <input type="text" name="system.saves.sorcery.value" value="{{system.saves.sorcery.value}}"/>
+        <input type="text" name="system.saves.sorcery.value" value="{{system.saves.sorcery.value}}" data-dtype="Number"/>
       </div>
     </div>
 
