Added save button to damage chat when applicable

--- a/templates/chat/damage-roll.hbs
+++ b/templates/chat/damage-roll.hbs
@@ -35,5 +35,8 @@
                     data-roll="{{dmgBaseRoll}}" data-source-type="{{sourceType}}"></span>
             </h4>
         </div>
+        {{#if save}}
+        <div class='save-button' data-save='{{save}}'></div>
+        {{/if}}
     </div>
 </div>
