Data template and fields added for grenades and area effect attacks. Text localization improvements.

--- a/templates/item/item-spell-sheet.hbs
+++ b/templates/item/item-spell-sheet.hbs
@@ -75,7 +75,7 @@
         <div class="flexrow flexshrink flex-group-left item-attributes">
           <label class="resource-label">{{localize 'HYP3E.item.consumable'}}</label>
           <input name="system.isConsumable" type="checkbox" {{checked system.isConsumable}}>
-          <div class="flex-xlarge">Note: Leave this item checked unless the spell is being used as an at-will power.</div>
+          <div class="flex-xlarge">{{localize 'HYP3E.spell.attributes.isConsumable'}}</div>
         </div>
         <label class="resource-label">{{localize 'HYP3E.dataLabel.itemId'}}</label>
         <input type="text" name="item._id" value="{{item._id}}" disabled/>
