--- a/templates/item/item-item-sheet.hbs
+++ b/templates/item/item-item-sheet.hbs
@@ -81,12 +81,12 @@
         <div class="flexrow flexshrink flex-group-left item-attributes">
           <label class="resource-label">{{localize 'HYP3E.item.consumable'}}</label>
           <input name="system.isConsumable" type="checkbox" {{checked system.isConsumable}}>
-          <div class="flex-xlarge">The Consumable tag gives this item the increment/decrement buttons.</div>
+          <div class="flex-xlarge">{{localize 'HYP3E.item.attributes.isConsumable'}}</div>
         </div>
         <div class="flexrow flexshrink flex-group-left item-attributes">
           <label class="resource-label">{{localize 'HYP3E.item.ammunition'}}</label>
           <input name="system.isAmmunition" type="checkbox" {{checked system.isAmmunition}}>
-          <div class="flex-xlarge">The Ammunition tag causes this item to display on the Combat tab.</div>
+          <div class="flex-xlarge">{{localize 'HYP3E.item.attributes.isAmmunition'}}</div>
         </div>
         <label class="resource-label">{{localize 'HYP3E.dataLabel.itemId'}}</label>
         <input type="text" name="item._id" value="{{item._id}}" disabled/>
@@ -97,7 +97,7 @@
         <div class="flexrow flexshrink flex-group-left item-attributes">
           <label class="resource-label">{{localize 'HYP3E.item.container'}}</label>
           <input id="system.isContainer" name="system.isContainer" type="checkbox" {{checked system.isContainer}}>
-          <div class="flex-xlarge">The Container tag allows this item to contain other non-container items.</div>
+          <div class="flex-xlarge">{{localize 'HYP3E.item.attributes.isContainer'}}</div>
         </div>
       </div>
     </div>
