--- a/templates/item/item-weapon-sheet.hbs
+++ b/templates/item/item-weapon-sheet.hbs
@@ -100,6 +100,16 @@
         {{/if}}
         <label class="resource-label">{{localize 'HYP3E.dataLabel.friendlyName'}}</label>
         <input type="text" name="system.friendlyName" value="{{system.friendlyName}}" />
+        <div class="flexrow flexshrink flex-group-left item-attributes">
+          <label class="resource-label">{{localize 'HYP3E.item.grenade'}}</label>
+          <input name="system.isGrenade" type="checkbox" {{checked system.isGrenade}}>
+          <div class="flex-xlarge">{{localize 'HYP3E.weapon.attributes.isGrenade'}}</div>
+        </div>
+        <div class="flexrow flexshrink flex-group-left item-attributes">
+          <label class="resource-label">{{localize 'HYP3E.item.areaEffect'}}</label>
+          <input name="system.isAreaEffect" type="checkbox" {{checked system.isAreaEffect}}>
+          <div class="flex-xlarge">{{localize 'HYP3E.weapon.attributes.isAreaEffect'}}</div>
+        </div>
         <label class="resource-label">{{localize 'HYP3E.dataLabel.itemId'}}</label>
         <input type="text" name="item._id" value="{{item._id}}" disabled/>
         <label class="resource-label">{{localize 'HYP3E.dataLabel.containerId'}}</label>
