--- a/templates/actor/actor-npc-sheet.hbs
+++ b/templates/actor/actor-npc-sheet.hbs
@@ -10,7 +10,11 @@
         </h1>
         <div class="character-header-block flexrow">
           <div class="npc-field align-center">
-            <input type="text" name="system.size" value="{{system.size}}" />
+            {{!-- <input type="text" name="system.size" value="{{system.size}}" /> --}}
+            <select name="system.size">
+              <option value=""></option>
+              {{selectOptions creatureSizes selected=system.size localize=false}}
+            </select><br/>
             <span class="small-label">{{localize 'HYP3E.size'}}</span>
           </div>
           <div class="npc-field align-center">
