Add item description to damage chat if a save is required.

--- a/templates/chat/damage-roll.hbs
+++ b/templates/chat/damage-roll.hbs
@@ -36,6 +36,7 @@
             </h4>
         </div>
         {{#if save}}
+        <div>{{{description}}}</div>
         <div class='save-button' data-save='{{save}}'></div>
         {{/if}}
     </div>
